# serializer version: 1
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'plugin.json'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.1
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'index.ts'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.3
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'plugin.json'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.4
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'index.ts'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.5
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'plugin.json'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.1
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'index.ts'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'plugin.json'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.1
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'index.ts'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'plugin.json'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.1
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'frontend.tsx'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_site_ts_works
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'plugin.json'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_site_ts_works.1
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'site.ts'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_site_ts_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'plugin.json'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.1
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'index.ts'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.3
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'plugin.json'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.4
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'frontend.tsx'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.5
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_with_subdir_works
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'plugin.json'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_with_subdir_works.1
  '''
  SELECT "insights_pluginsourcefile"."id",
         "insights_pluginsourcefile"."plugin_id",
         "insights_pluginsourcefile"."filename",
         "insights_pluginsourcefile"."source",
         "insights_pluginsourcefile"."status",
         "insights_pluginsourcefile"."transpiled",
         "insights_pluginsourcefile"."error",
         "insights_pluginsourcefile"."updated_at"
  FROM "insights_pluginsourcefile"
  WHERE ("insights_pluginsourcefile"."filename" = 'index.ts'
         AND "insights_pluginsourcefile"."plugin_id" = 99999)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_with_subdir_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "insights_pluginsourcefile"
  '''
# ---
